# moca

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  Spec-Phase2.md  Spec-string-to-slot.md  Spec-unify-slots.md  Spec-v0.md  Spec-v1.md  Spec-v2.md  Spec-v3.md  Spec.md  build.rs  cbindgen.toml  spec.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/workflows/: ci.yml
bench/: Cargo.toml
bench/moca/: fibonacci.mc  mandelbrot.mc  nested_loop.mc
bench/src/: main.rs
benches/: vm_benchmark.rs
docs/: CONTRIBUTING.md  README.md  Spec.md  asm.md  c-api.md  cli.md  debugger.md  jit.md  language.md  spec-collection-literals.md  spec-index-desugar.md  spec-linear-heap.md  spec-typed-opcodes.md  structs.md  testing.md  types.md  vm-core.md  vm.md
examples/: cli_args.mc  control.mica  fizzbuzz.mc  fizzbuzz.mica  http_get.mc  http_server.mc  mandelbrot.mc  mandelbrot_hires.mc  mandelbrot_zoom.mc  raymarching_torus.mc
include/: mica.h  moca.h
plugins/.claude-plugin/: marketplace.json
plugins/moca-lsp/: .lsp.json  plugin.json
spec/: README.md  c-api.md  cli-dump-options.md  cli.md  debugger.md  jit.md  language.md  lsp.md  package.md  phase1-core.md  phase2-c-abi.md  structs.md  testing.md  types.md  vm-core.md  vm.md
src/: config.rs  lib.rs  main.rs
src/compiler/: ast.rs  codegen.rs  desugar.rs  dump.rs  lexer.rs  linter.rs  mod.rs  module.rs  monomorphise.rs  parser.rs  resolver.rs  typechecker.rs  types.rs
src/debugger/: mod.rs
src/ffi/: call.rs  error.rs  load.rs  mod.rs  stack.rs  types.rs  vm_ffi.rs
src/jit/: aarch64.rs  codebuf.rs  compiler.rs  marshal.rs  (+8 more)
std/: prelude.mc  prelude_test.mc
tests/: e2e.rs  inprocess_tests.rs  mandelbrot_comparison.rs  perf_benchmark.rs  snapshot_tests.rs
(+469 files in other folders)
