[package]
name = "mica"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
