[workspace]
members = ["."]

[package]
name = "moca"
version = "0.1.0"
edition = "2024"

[features]
default = ["jit"]
jit = []

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[build-dependencies]
cbindgen = "0.28"

[lib]
name = "moca"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "moca"
path = "src/main.rs"
